--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 					<div class="feature_item">
 						<h3>Tokyo University (Degree 3rd Year)</h3>
 						<p>---</p>
-						<h4>English Teaching</h4>
+						<h4>English Teaching - Pre-Intermediate level</h4>
 						<p>Utsunomiya & Tokyo, Japan</p>
 						<p>2016 - 2017</p>
 					</div>
@@ -285,6 +285,60 @@
 		</div>
 	</section>
 	<!--================ End Experience Area =================-->
+
+		<!--================ Start Interests Area =================-->
+		<section class="features_area">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-8 text-center">
+						<div class="main_title">
+							<h2>Interests & Hobbies</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row feature_inner">
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s5.png" alt="">
+							<h4>Music</h4>
+							<p>I've been playing the drums casually on a casual basis since high school. I 
+								have been a part of two bands in this time, but find playing to de-stress 
+								after a long day at work to be extremely fulfilling</p>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s6.png" alt="" >
+							<h4>Technology</h4>
+							<p>I spend a few hours every week either building computers, or modifying the 
+								computers of friends and family to keep them up to operating standards. 
+								This can include both hardware upgrades or cleaning software</p>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+							<img src="img/services/s7.png" alt="">
+							<h4>Electric Vehicles</h4>
+							<p>I have a passion for all alternative fuels in mobility, however I have spent many, 
+								many hours with electric vehicles. In particular, I am interested in integrated
+								technology, drive motor technology, and battery technology, which i spend a lot of 
+								reviewing datasets and logs for their full-discharge-charge cycle statistics
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="feature_item">
+								<img src="img/services/s8.png" alt="">
+								<h4>Outdoor Adventures</h4>
+								<p>Im always keen for a day out mountain biking, hiking or tramping, or a night out camping 
+									or glamping in the car. Nothing beats looking up at a starry night sky with friends and family</p>
+							</div>
+					</div>
+				</div>
+			</div>
+			<a id="education"></a>
+		</section>
+		<!--================ End Interests Area =================-->
 
 	<!--================Footer Area =================-->
 	<footer class="footer_area">
