--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							<li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
 							<li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
 							<li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+							<li class="nav-item"><a class="nav-link" href="#Interests">Interests</a></li>
 						</ul>
 					</div>
 				</div>
@@ -278,14 +279,14 @@
 						</div><div class="d-flex mb-50">
 							<span class="lage">2</span>
 							<span class="smll">Years Volunteer work</span>
-						</div>
+						</div><a id="Interests"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!--================ End Experience Area =================-->
-
+	
 		<!--================ Start Interests Area =================-->
 		<section class="features_area">
 			<div class="container">
